# DMP-bot-lambda

./: .gitignore  Pipfile  README.md  manage.py  requirements.txt  setup.cfg
app/: commands.py  discord_types.py  helpers.py  lambda_function.py  lambda_types.py
scripts/: dev-install.ps1  update-requirements.ps1  zip.ps1
