[metadata]
name = dmp-bot-lambda
version = 0.0.1-pre
description = A package for DMP-bot running on AWS lambda
long_description = file: README.md
long_description_content_type = text/markdown
author = TakeMe1010
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =app
packages = find:
